--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,98 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
+.app{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-content{
+  display: block;
+  padding: 1rem 2rem;
+  justify-items: center;
+}
+
+.input-container>span{
+  font-size: 20px;
+  color: #F2F7F2;
+  font-weight: 500;
+}
+.input-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 10px;
+}
+input, select{
+  padding: 0.5rem;
+  border-radius: 8px;
+  border: 1px solid #4F9D69;
+  background-color: #272727;
+  font-size: 20px;
+  color: #F2F7F2;
+  font-weight: 500;
+}
+
+input::placeholder{
+  color: #4F9D69;
+}
+
+.profile-card{
+  padding: 1rem;
+  width: 100%;
+  border-radius: 50px;
+  border: 1px solid #4F9D69;
+}
+
+.profile-card>div:first-of-type{
+  margin-bottom: 1rem;
+}
+
+.fav-champ-container{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 50px;
+}
+
+.fav-champ-container>h3{
+  font-size: 20px;
+  color: #F2F7F2;
+  font-weight: 500;
+  text-align: center;
+  background-color: #000000CC;
+  margin: 0;
+  padding: 0.5rem;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+}
+
+.favorite-champs{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  justify-items: center;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.favorite-champs>div{
+  background-color: #000000CC;
+  min-width: 120px;
+  margin: 5px;
+  border: 1px solid #4F9D69;
+  border-radius: 10px;
+}
+
+.ranked-stats{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
